<resources>
    <string name="app_name">Music Player</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_account">Account</string>
    <string name="title_library">Library</string>
    <string name="title_for_you">For You</string>
    <string name="title_browse">Browse</string>
    <string name="title_radio">Radio</string>

    <string name="this_the_library_fragment">This the Library Fragment</string>
    <string name="this_is_for_you_fragment">This is for you fragment</string>
    <string name="this_is_the_browse_fragment">This is the Browse Fragment</string>
    <string name="this_is_the_radio_fragment">This is the Radio Fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="library">Library</string>
    <string name="edit">Edit</string>
    <string name="playlists">Playlists</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="songs">Songs</string>
    <string name="downloaded_music">Downloaded Music</string>
    <string name="recently_added">Recently Added</string>
    <string name="album_art">Album Art</string>
    <string name="roses">Roses</string>
</resources>
