<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LibraryFragment">
    <LinearLayout
        android:id="@+id/library_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        tools:ignore="UselessParent">

        <!--I Will be making the library Page here-->
        <LinearLayout
            android:id="@+id/library_tittle_text_with_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp">
            <!--Title Text-->
            <TextView
                android:id="@+id/library_tittle_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/library"
                android:textColor="@android:color/white"
                android:textSize="32sp"
                android:textStyle="bold"
                android:layout_weight="2">
            </TextView>
            <!--List edit option-->
            <!--Setting the gravity to the end to make text align to right-->
            <TextView
                android:id="@+id/library_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:layout_weight="2"
                android:textStyle="normal"
                android:gravity="end">
            </TextView>
        </LinearLayout>

        <!--Space draws the blank space and it ignores the drawing attributes-->
        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />
        <!--Using view  i can draw the horizontal line-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/horizontalLine"/>

        <!--Here is the View List-->
        <!--For now I will only make the static list-->

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />
        <TextView
            android:id="@+id/library_list_item_playlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/playlists"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="normal">
        </TextView>
        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/horizontalLine"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />
        <TextView
            android:id="@+id/library_list_item_artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/artists"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="normal">
        </TextView>
        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/horizontalLine"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />
        <TextView
            android:id="@+id/library_list_item_albums"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/albums"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="normal">
        </TextView>
        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/horizontalLine"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />
        <TextView
            android:id="@+id/library_list_item_songs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/songs"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="normal">
        </TextView>
        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/horizontalLine"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />
        <TextView
            android:id="@+id/library_list_item_downloaded_music"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/downloaded_music"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="normal">
        </TextView>
        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/horizontalLine"/>
        <!--List Ends-->


    </LinearLayout>
</FrameLayout>